// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createCommunity with networkId includes networkId in variables 1`] = `
Object {
  "graphql": Object {
    "query": "mutation ($data: CommunityInput) {
        createCommunity(data: $data) {
          id
          hasModeratorRole
          community {
            id
            name
            slug
            network {
              id
            }
          }
        }
      }
      ",
    "variables": Object {
      "data": Object {
        "name": "thename",
        "networkId": 123,
        "slug": "theslug",
      },
    },
  },
  "meta": Object {
    "extractModel": "Membership",
    "name": "thename",
    "networkId": 123,
    "slug": "theslug",
  },
  "type": "Review/CREATE_COMMUNITY",
}
`;

exports[`createCommunity without networkId omits networkId from variables 1`] = `
Object {
  "graphql": Object {
    "query": "mutation ($data: CommunityInput) {
        createCommunity(data: $data) {
          id
          hasModeratorRole
          community {
            id
            name
            slug
            network {
              id
            }
          }
        }
      }
      ",
    "variables": Object {
      "data": Object {
        "name": "thename",
        "slug": "theslug",
      },
    },
  },
  "meta": Object {
    "extractModel": "Membership",
    "name": "thename",
    "slug": "theslug",
  },
  "type": "Review/CREATE_COMMUNITY",
}
`;
